--- a/CodificaConGuali/config.css
+++ b/CodificaConGuali/config.css
@@ -14,7 +14,7 @@ body {
   background-color: #333;
   padding: 12px 20px;
   display: flex;
-  justify-content: space-between; /* separa izquierda y derecha */
+  justify-content: space-between;
   align-items: center;
 }
 
